@@ -1487,3 +1487,7 @@
 
         * Change the method to calculate a distance which be scrolled from linear to sine curve.
         And add the configuration thumbscroll_flick_distance_tolerance. It's the max flick distance.
+
+2013-07-06  Shinwoo Kim
+
+        * Add elm_access_highlight_next_set, export elm_widget_focus_region_show
